deploy/manifests/argo/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo
  namespace: argo
spec:
  gateways:
    - istio-ingress/cluster-gateway
  hosts:
    - "argo.pbl6.mamlong34.monster"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: argo-server
            port:
              number: 2746
